<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tap Some Morse</string>
    <string name="action_settings">Settings</string>
    <string name="dot">.</string>
    <string name="dash">-</string>
    <string name="button_space">Split/Space</string>
    <string name="button_backspace">Backspace</string>
    <string name="button_clear">Clear</string>
    <string name="button_copy">Copy</string>
    <string name="en_ru">EN/RU</string>
    <string name="hint_copy">Copy the text by tapping on it</string>
    <string name="hint_copied">Copied</string>

</resources>
